# leaf-area

./: .gitignore  README.md  pyproject.toml  requirements.txt  session_store.db
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml  parameters_preprocess.yml  parameters_train.yml
docs/source/: conf.py  index.rst
notebooks/: detr_autoencoder.ipynb  detr_training.ipynb  preprocess.ipynb  scratches.ipynb
notebooks/leaf-area-1/: README.dataset.txt  README.roboflow.txt
notebooks/leaf-area-1/train/: _annotations.coco.json
src/: hooks.py
src/leaf_area/: __init__.py  __main__.py  pipeline_registry.py
src/leaf_area/pipelines/preprocess/: __init__.py  nodes.py  pipeline.py
src/leaf_area/pipelines/train/: __init__.py  nodes.py  pipeline.py
src/model_builder/: model_builder.py
src/utils/: utils.py
tests/: test_run.py
tests/pipelines/preprocess/: test_pipeline.py
tests/pipelines/train/: test_pipeline.py
